# associated-token-account

./: Cargo.toml
compare-programs/: Cargo.toml
compare-programs-macro/: Cargo.toml
compare-programs-macro/src/: lib.rs
compare-programs/src/: lib.rs  observer.rs  report.rs
p-ata/: Cargo.toml  build.rs
p-ata/.cargo/: config.toml
p-ata/benches/: ata_instruction_benches.rs  failure_scenarios.rs
p-ata/benches/common/: account_comparison.rs  account_templates.rs  common.rs  common_builders.rs  mod.rs
p-ata/src/: lib.rs  processor.rs  size.rs  test_helpers.rs  test_utils.rs
p-ata/tests/: mod.rs
p-ata/tests/bump/: test_bump_utils.rs  test_idemp_oncurve_attack.rs  test_mollusk_non_canonical_bump.rs
p-ata/tests/migrated/: create_idempotent.rs  extended_mint.rs  process_create_associated_token_account.rs  recover_nested.rs  spl_token_create.rs
p-ata/tests/token_account_len/: test_account_length_limits.rs
p-ata/tests/utils/: account_builder.rs  address_gen.rs  mollusk_adapter.rs  test_utils.rs
program/: Cargo.toml
program/tests/: common.rs  create_idempotent.rs  extended_mint.rs  process_create_associated_token_account.rs  recover_nested.rs  spl_token_create.rs  utils.rs
test-harness/: Cargo.toml
test-harness/src/: lib.rs
