[package]
name = "compare-programs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
compare-programs-macro = { path = "../compare-programs-macro" }
mollusk-svm = { version = "0.6.2" }
solana-account = "3.0"
solana-pubkey = "3.0"

[features]
serde = ["dep:serde", "dep:serde_json"]

