[package]
name = "compare-programs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
compare-programs-macro = { path = "../compare-programs-macro" }
mollusk-svm = { version = "0.6.3", git = "https://github.com/rustopian/mollusk.git", branch = "process-instruction-with-observer" }
solana-account = "3.0"
solana-address = "1.0"
solana-keypair = "3.0"
solana-program-runtime = "3.0"
solana-pubkey = "3.0"
solana-instruction = "3.0"
solana-system-interface = { version = "2.0", features = ["bincode"] }
spl-associated-token-account-interface = "2.0"
bincode = "1"
spl-token-interface = "2.0"
spl-token-2022-interface = "2.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
serde = ["dep:serde", "dep:serde_json"]

